Működő ablakváltás a fő programban, grafikon megjelenítése

--- a/src/main/resources/org/beadando/beadando/hello-view.fxml
+++ b/src/main/resources/org/beadando/beadando/hello-view.fxml
@@ -14,9 +14,9 @@
     </padding>
     <MenuBar fx:id="menuBar">
         <menus>
-            <Menu text="Teszt">
+            <Menu text="SOAP">
                 <items>
-                    <MenuItem text="Teszt beágyazott" onAction="#TesztMetod"/>
+                    <MenuItem text="Grafikon" onAction="#TesztMetod"/>
                 </items>
             </Menu>
         </menus>
