--- a/src/main/resources/org/beadando/beadando/hello-view.fxml
+++ b/src/main/resources/org/beadando/beadando/hello-view.fxml
@@ -2,36 +2,47 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Menu?>
-<VBox alignment="TOP_LEFT" spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.beadando.beadando.HelloController">
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<VBox alignment="TOP_LEFT" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="org.beadando.beadando.HelloController">
     <padding>
-        <Insets bottom="0" left="0" right="0" top="0"/>
+        <Insets bottom="0" left="0" right="0" top="0" />
     </padding>
     <MenuBar fx:id="menuBar">
         <menus>
             <Menu text="Adatbázis">
                 <items>
-                    <MenuItem text="Olvas" onAction="#adatbazismegnyit"/>
-                    <MenuItem text="Olvas 2" onAction="#adatbazismegnyit"/>
-                    <MenuItem text="Ír" onAction="#adatbazismegnyit"/>
-                    <MenuItem text="Módosít" onAction="#adatbazismegnyit"/>
-                    <MenuItem text="Töröl" onAction="#adatbazismegnyit"/>
+                    <MenuItem onAction="#adatbazismegnyit" text="Olvas" />
+                    <MenuItem onAction="#adatbazismegnyit" text="Olvas 2" />
+                    <MenuItem onAction="#adatbazismegnyit" text="Ír" />
+                    <MenuItem onAction="#adatbazismegnyit" text="Módosít" />
+                    <MenuItem onAction="#adatbazismegnyit" text="Töröl" />
                 </items>
             </Menu>
         </menus>
         <menus>
             <Menu text="SOAP">
                 <items>
-                    <MenuItem text="Grafikon" onAction="#TesztMetod"/>
+                    <MenuItem onAction="#TesztMetod" text="Grafikon" />
                 </items>
             </Menu>
         </menus>
     </MenuBar>
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+   <VBox prefHeight="200.0" prefWidth="100.0">
+      <children>
+          <Label fx:id="welcomeText" text="Üdvözöllek az alkalmazásban!">
+            <font>
+               <Font size="18.0" />
+            </font>
+         </Label>
+         <Label fx:id="welcomeText1" text="A funkciók futtatásához kattints valamelyik menüre felül!" />
+      </children>
+      <padding>
+         <Insets left="10.0" />
+      </padding>
+   </VBox>
 </VBox>
