1. CRUD feladat kész

--- a/src/main/resources/org/beadando/beadando/crud.fxml
+++ b/src/main/resources/org/beadando/beadando/crud.fxml
@@ -2,7 +2,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.beadando.beadando.MainController">
+<BorderPane xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.beadando.beadando.CrudController">
 
     <left>
         <VBox spacing="10" alignment="CENTER" style="-fx-padding: 10;">
