--- a/src/main/resources/org/beadando/beadando/hello-view.fxml
+++ b/src/main/resources/org/beadando/beadando/hello-view.fxml
@@ -31,6 +31,13 @@
                 </items>
             </Menu>
         </menus>
+        <menus>
+            <Menu text="Párhuzamos feladat">
+                <items>
+                    <MenuItem onAction="#parhuzam" text="Parhuzamos feladat" />
+                </items>
+            </Menu>
+        </menus>
     </MenuBar>
    <VBox prefHeight="200.0" prefWidth="100.0">
       <children>
