1. és 3. CRUD feladat kész

--- a/src/main/resources/org/beadando/beadando/modosit.fxml
+++ b/src/main/resources/org/beadando/beadando/modosit.fxml
@@ -10,6 +10,7 @@
     <left>
         <!-- Rekord módosítása -->
         <VBox spacing="10" alignment="CENTER" style="-fx-padding: 10;">
+            <Label text="Formula-1 Módosít művelet a GP táblára:" style="-fx-font-size: 14px; -fx-font-weight: bold;"/>
             <HBox spacing="10">
                 <Label text="Válassz rekordot:"/>
                 <ComboBox fx:id="modifyComboBox"/>
