--- a/src/main/resources/org/beadando/beadando/hello-view.fxml
+++ b/src/main/resources/org/beadando/beadando/hello-view.fxml
@@ -38,7 +38,7 @@
                     <MenuItem onAction="#szamlainfo" text="Számlainformáció" />
                     <MenuItem onAction="#aktarak" text="Aktuális árak" />
                     <MenuItem onAction="#histarak" text="Historikus árak" />
-                    <MenuItem onAction="#TesztMetod" text="Pozíció nyitás" />
+                    <MenuItem onAction="#poznyit" text="Pozíció nyitás" />
                     <MenuItem onAction="#TesztMetod" text="Pozíció zárás" />
                     <MenuItem onAction="#TesztMetod" text="Nyitott pozíciók" />
                 </items>
