1. és 3. CRUD feladat kész

--- a/src/main/resources/org/beadando/beadando/hello-view.fxml
+++ b/src/main/resources/org/beadando/beadando/hello-view.fxml
@@ -34,7 +34,7 @@
         <menus>
             <Menu text="Párhuzamos feladat">
                 <items>
-                    <MenuItem onAction="#parhuzam" text="Parhuzamos feladat" />
+                    <MenuItem onAction="#parhuzam" text="Párhuzamos feladat" />
                 </items>
             </Menu>
         </menus>
